<resources>
    <string name="app_name">Portfolio App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="lbl_portTitle">My Nanodegree Apps</string>
    <string name="btn_proj1">Spotify Streamer</string>
    <string name="btn_proj2">Super Duo</string>
    <string name="btn_proj3">Build It Bigger</string>
    <string name="btn_proj4">XYZ Reader</string>
    <string name="btn_proj5">Capstone</string>

    <string name="notfound">Not Found</string>
</resources>
